[gd_scene load_steps=4 format=2]

[ext_resource path="res://motion_ai/pawn/BasePawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://tests/test_assets/KinematicPawn.gd" type="Script" id=2]
[ext_resource path="res://motion_ai/common/kinematic_driver_machine/KinematicDriverMachine.tscn" type="PackedScene" id=3]

[node name="KinematicPawn" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VisualSprite" parent="." index="3"]
frame = 2

[node name="KinematicDriverMachine" parent="." index="6" instance=ExtResource( 3 )]
fsm_owner = NodePath("..")
kinematic_core = NodePath("../KinematicCore")
[connection signal="path_complete" from="KinematicDriverMachine" to="." method="_on_KinematicDriverMachine_path_complete"]
[connection signal="visual_update" from="KinematicDriverMachine" to="." method="_on_KinematicDriverMachine_visual_update"]
